support conversation memory for RAG

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 .DS_Store
 
 # Source for the following rules: https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
-__pycache__/
+**/__pycache__/
